check google maps

--- a/front/html/header.html
+++ b/front/html/header.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
+    <!-- <meta charset="UTF-8"> -->
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
     <title>{{title}}</title>
 </head>
 <body>
     <ul>
         <li><a href="/">General</a></li>
-        <li><a href="/model">Some model</a></li>
+        <li><a href="/model">Some page</a></li>
     </ul>
