--- a/front/html/main.html
+++ b/front/html/main.html
@@ -1,3 +1,31 @@
-<div>
-    {{title}}
-</div>
+<!-- <div> -->
+    <!-- {{title}} -->
+    <style>
+        /* Always set the map height explicitly to define the size of the div
+         * element that contains the map. */
+        #map {
+          height: 100%;
+        }
+        /* Optional: Makes the sample page fill the window. */
+        html, body {
+          height: 100%;
+          margin: 0;
+          padding: 0;
+        }
+      </style>
+
+<div id="map"></div>
+<script>
+  var map;
+  function initMap() {
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: -34.397, lng: 150.644},
+      zoom: 8
+    });
+  }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUGqjCdt_q_MWu92NybUn4i1yVKvisDpo&callback=initMap"
+async defer></script>
+
+  
+<!-- </div> -->
