--- a/front/html/main.html
+++ b/front/html/main.html
@@ -1,5 +1,5 @@
 <!-- <div> -->
-    <!-- {{title}} -->
+    {{title}}
     <style>
         /* Always set the map height explicitly to define the size of the div
          * element that contains the map. */
