--- a/front/html/header.html
+++ b/front/html/header.html
@@ -4,6 +4,7 @@
     <!-- <meta charset="UTF-8"> -->
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>{{title}}</title>
 </head>
 <body>
