--- a/front/html/main.html
+++ b/front/html/main.html
@@ -1,31 +1,24 @@
-<!-- <div> -->
+
     {{title}}
     <style>
-        /* Always set the map height explicitly to define the size of the div
-         * element that contains the map. */
         #map {
           height: 100%;
         }
-        /* Optional: Makes the sample page fill the window. */
         html, body {
           height: 100%;
           margin: 0;
           padding: 0;
         }
       </style>
-
-<div id="map"></div>
-<script>
-  var map;
-  function initMap() {
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: {lat: -34.397, lng: 150.644},
-      zoom: 8
-    });
+<script src="https://api-maps.yandex.ru/2.1/?apikey=ALY7xF0BAAAAhdxWdAMAKqZ-k-ajocDMtIhyBKidQjiCOekAAAAAAAAAAAAEYfcnOSVoIvoK1YH7JSShZAY_PQ==&lang=ru_RU" type="text/javascript">
+</script>
+ <div id="map"></div>
+ <script type="text/javascript">
+  ymaps.ready(init);
+  function init(){
+      var myMap = new ymaps.Map("map", {
+          center: [55.76, 37.64],
+          zoom: 7
+      });
   }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUGqjCdt_q_MWu92NybUn4i1yVKvisDpo&callback=initMap"
-async defer></script>
-
-  
-<!-- </div> -->
