--- a/front/html/header.html
+++ b/front/html/header.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <script type="text/javascript" src="/assets/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/assets/js/server.js"></script>
     <title>{{title}}</title>
 </head>
 <body>
