--- a/front/html/header.html
+++ b/front/html/header.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- <meta charset="UTF-8"> -->
-    <meta name="viewport" content="initial-scale=1.0">
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <script type="text/javascript" src="/assets/js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="/assets/js/server.js"></script>
-    <title>{{title}}</title>
-</head>
-<body>
-    <ul>
-        <li><a href="/">General</a></li>
-        <li><a href="/model">Some page</a></li>
-    </ul>
+    <head>
+        <!-- <meta charset="UTF-8"> -->
+        <meta name="viewport" content="initial-scale=1.0">
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="../assets/css/style.css">
+        <script type="text/javascript" src="../assets/js/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="../assets/js/server.js"></script>
+        <link rel="ICON" href="../logo.ico" type="image/ico"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/68a1da4b2e.js" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+        <title>GoCharge App</title>
+    </head>
+    <body>
+        <div class="container-fluid">
+            <div class="row bg-dark">
+                <div class="col-md-4">
+                    <div class="searchBox" style="display: inline-block;">
+                        <i class="fas fa-search"></i>
+                        <input class="searchInput" type="text" name="" placeholder="search location">
+                    </div>
+                    <button style="display: inline-block; border-radius: 7px;">
+                        <i class="fas fa-location-arrow"></i>
+                    </button>
+                </div>
+                <div class="col-md-7">
+                    <div class="text-center text-light display-4 p-2" style="position:relative; font-size: 25px;">Go<i class="fas fa-bolt"></i>Charge</div>
+                </div>
+                <div class="col-md-1">
+                    <button style="background: transparent; border-color: transparent;">
+                        <i class="fas fa-globe-americas fa-2x" style="color: white; float:right; padding:5px;"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript" src="../assets/js/main.js"></script>
+    </body>
+</html>
