put htaccess, work with modal logic

--- a/front_zozo/html/main.html
+++ b/front_zozo/html/main.html
@@ -34,7 +34,8 @@
         <li class="list-group-item">Filters</li>
         <li class="list-group-item">Trip Planner</li>
         <li class="list-group-item">Filters</li>
-        <li class="list-group-item settings"><button id="settings">Settings</button></li>
+        <!-- <li class="list-group-item settings"><button id="settings">Settings</button></li> -->
+        <li class="list-group-item"><a class="showmodal" href="#" data-action="settings">Settings</a></li>
         <li class="list-group-item">Help</li>
         <li class="list-group-item">Payment</li>
         <li class="list-group-item download-app">
