--- a/front/html/main.html
+++ b/front/html/main.html
@@ -1,231 +1,61 @@
-<script src="https://api-maps.yandex.ru/2.1/?apikey=ALY7xF0BAAAAhdxWdAMAKqZ-k-ajocDMtIhyBKidQjiCOekAAAAAAAAAAAAEYfcnOSVoIvoK1YH7JSShZAY_PQ==&lang=en_US" type="text/javascript"></script>
-<script type="text/javascript" src="../assets/js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="../assets/js/main.js"></script> 
-<link rel="stylesheet" href="../assets/css/style.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-        <script src="https://kit.fontawesome.com/68a1da4b2e.js" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+<style>
+    /* Always set the map height explicitly to define the size of the div
+        * element that contains the map. */
+    #map {
+        height: 100%;
+    }
+    /* Optional: Makes the sample page fill the window. */
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+</style>
 
-	<div class="sidebar-header">
-      <button type="button" id="sidebarCollapse" class="btn btn-info">
-          <i class="fas fa-bars"></i>
-      </button>
-    </div>	
-		<div class="wrapper">
-	    <!-- Sidebar  -->
-	    <nav id="sidebar">
-	      <ul class="list-unstyled components">
-	      		<li class="active">
-	              <a href="main.html" data-toggle="collapse" aria-expanded="false">
-	                  <i class="fas fa-home"></i>
-	                  Home
-	              </a>
-	          </li>
-	          <li>
-	              <a href="#login" data-toggle="modal" aria-expanded="false" data-target="#loginModal">
-	                  <i class="fas fa-sign-in-alt"></i>
-	                  Login
-	              </a>
-	          </li>
-	          <li>
-	              <a href="#register" data-toggle="modal" aria-expanded="false" data-target="#registerModal">
-	                  <i class="fas fa-id-card"></i>
-	                  Register
-	              </a>
-	          </li>
-	          <li>
-	              <a href="#filters" data-toggle="modal" aria-expanded="false" data-target="#filtersModal">
-	                  <i class="fas fa-plug"></i>
-	                  Filters
-	              </a>
-	          </li>
-	          <li>
-	              <a href="#planner" data-toggle="modal" aria-expanded="false" data-target="#plannerModal">
-	                  <i class="fas fa-road"></i>
-	                  Trip Planner
-	              </a>
-	          </li>
-	          <li>
-	              <a href="#settings" data-toggle="modal" aria-expanded="false" data-target="#settingsModal">
-	                  <i class="fas fa-cog"></i>
-	                  Settings
-	              </a>
-	          </li>
-	          <li>
-	              <a href="#help" data-toggle="modal" aria-expanded="false" data-target="#helpModal">
-	                  <i class="fas fa-question"></i>
-	                  Help
-	              </a>
-	          </li>
-	          <li>
-	              <a href="payment.html" aria-expanded="false">
-	                  <i class="fas fa-credit-card"></i>
-	                  Payment
-	              </a>
-	          </li>
-	          <li>
-              <a href="#downloadSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                  <i class="fas fa-download"></i>
-                  Download App
-              </a>
-              <ul class="collapse list-unstyled" id="downloadSubmenu">
-                  <li>
-                      <a href="#">Android</a>
-                  </li>
-                  <li>
-                      <a href="#">iOS</a>
-                  </li>
-              </ul>
-            </li>
-            <li>
-              <a href="#termsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                  <i class="fas fa-document"></i>
-                  Terms & Conditions
-              </a>
-              <ul class="collapse list-unstyled" id="termsSubmenu">
-                  <li>
-                      <a href="#">Terms of use</a>
-                  </li>
-                  <li>
-                      <a href="#">Privacy Policy</a>
-                  </li>
-              </ul>
-	          </li>
-	      </ul>
-	    </nav>
-	  </div>
-	  <div id="map"></div>
-		
-	  <div id="loginModal" class="modal" tabindex="-1" role="dialog">
-		  <div class="modal-dialog modal-dialog-centered" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title">User Login</h5>
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		          <span aria-hidden="true">&times;</span>
-		        </button>
-		      </div>
-		      <div class="modal-body">
-		        <form>
-		        	<span>Email address</span>
-				      <input type="text" id="login" class="fadeIn second" name="login">
-				      <span>Password</span>
-				      <input type="text" id="password" class="fadeIn third" name="login">
-				    </form>
+<div id="map"></div>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 47.4979, lng: 19.0402},
+          zoom: 15,
+             disableDefaultUI: true
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer>
+</script>
 
-				    <div id="formFooter">
-				      <a class="underlineHover" href="#">Forgot Password?</a>
-				    </div>
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		        <button type="submit" class="btn btn-primary">Log In</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-
-		<div id="registerModal" class="modal" tabindex="-1" role="dialog">
-		  <div class="modal-dialog modal-dialog-centered" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title">User Registration</h5>
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		          <span aria-hidden="true">&times;</span>
-		        </button>
-		      </div>
-		      <div class="modal-body">
-		        <form>
-		        	<span>Email address</span>
-				      <input type="text" id="login" class="fadeIn first" name="register">
-				      <span>Password</span>
-				      <input type="text" id="password" class="fadeIn second" name="register">
-				      <span>Password Confirmation</span>
-				      <input type="text" id="password_confirmation" class="fadeIn third" name="register">
-				    </form>
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		        <button type="submit" class="btn btn-primary">Register</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-
-		<div id="filtersModal" class="modal" tabindex="-1" role="dialog">
-		  <div class="modal-dialog modal-dialog-centered" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title">Filters</h5>
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		          <span aria-hidden="true">&times;</span>
-		        </button>
-		      </div>
-		      <div class="modal-body">
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		        <button type="submit" class="btn btn-primary">Filter</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-
-		<div id="plannerModal" class="modal" tabindex="-1" role="dialog">
-		  <div class="modal-dialog modal-dialog-centered" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title">Trip Planner</h5>
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		          <span aria-hidden="true">&times;</span>
-		        </button>
-		      </div>
-		      <div class="modal-body">
-		        <form>
-		        	<span>From</span>
-				      <input type="text" id="login" class="fadeIn second" name="login">
-				      <span>To</span>
-				      <input type="text" id="password" class="fadeIn third" name="login">
-				    </form>
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		        <button type="submit" class="btn btn-primary">Plan</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-
-		<div id="settingsModal" class="modal" tabindex="-1" role="dialog">
-		  <div class="modal-dialog modal-dialog-centered" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title">Settings</h5>
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		          <span aria-hidden="true">&times;</span>
-		        </button>
-		      </div>
-		      <div class="modal-body">
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		        <button type="submit" class="btn btn-primary">Save</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-
-		<div id="helpModal" class="modal" tabindex="-1" role="dialog">
-		  <div class="modal-dialog modal-dialog-centered" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title">Help</h5>
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		          <span aria-hidden="true">&times;</span>
-		        </button>
-		      </div>
-		      <div class="modal-body">
-		      </div>
-		    </div>
-		  </div>
-		</div>
+<div id="menu" class="left-menu">
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item"><i class="fa fa-home" aria-hidden="true"></i> Home</li>
+        <li class="list-group-item"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</li>
+        <li class="list-group-item">Register</li>
+        <li class="list-group-item">Filters</li>
+        <li class="list-group-item">Trip Planner</li>
+        <li class="list-group-item">Filters</li>
+        <!-- <li class="list-group-item settings"><button id="settings">Settings</button></li> -->
+        <li class="list-group-item"><a class="showmodal" href="#" data-action="settings">Settings</a></li>
+        <li class="list-group-item">Help</li>
+        <li class="list-group-item">Payment</li>
+        <li class="list-group-item download-app">
+            Download App
+            <span>Download App</span>
+            <div class="menu-drop-download-app menu-undrop">
+                <ul>
+                    <li>IOS</li>
+                    <li>Android</li>
+                </ul>
+            </div>
+        </li>
+        <li class="list-group-item terms-conditions">
+            <span>Terms & Conditions</span>
+            <div class="menu-drop-terms-conditions menu-undrop">
+                <ul>
+                    <li>Terms of use</li>
+                    <li>Privacy Policy</li>
+                </ul>
+            </div>
+        </li>
+    </ul>
+</div>
