--- a/front/html/main.html
+++ b/front/html/main.html
@@ -1,32 +1,108 @@
-<style>
-    /* Always set the map height explicitly to define the size of the div
-        * element that contains the map. */
-    #map {
-        height: 100%;
-    }
-    /* Optional: Makes the sample page fill the window. */
-    html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
-</style>
-
-<div id="map"></div>
-    <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 47.4979, lng: 19.0402},
-          zoom: 15,
-             disableDefaultUI: true
-        });
-      }
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer>
+<div class="sidebar-menu">
+    <div class="sidebar-header">
+      <button type="button" id="sidebarCollapse" class="btn btn-info">
+          <i class="fas fa-bars"></i>
+      </button>
+    </div>  
+    <div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+          <ul class="list-unstyled components">
+                <li class="active">
+                  <a href="main.html" data-toggle="collapse" aria-expanded="false">
+                      <i class="fas fa-home"></i>
+                      Home
+                  </a>
+              </li>
+              <li>
+                  <a href="#login" data-toggle="modal" aria-expanded="false" data-target="#loginModal">
+                      <i class="fas fa-sign-in-alt"></i>
+                      Login
+                  </a>
+              </li>
+              <li>
+                  <a href="#register" data-toggle="modal" aria-expanded="false" data-target="#registerModal">
+                      <i class="fas fa-id-card"></i>
+                      Register
+                  </a>
+              </li>
+              <li>
+                  <a href="#filters" data-toggle="modal" aria-expanded="false" data-target="#filtersModal">
+                      <i class="fas fa-plug"></i>
+                      Filters
+                  </a>
+              </li>
+              <li>
+                  <a href="#planner" data-toggle="modal" aria-expanded="false" data-target="#plannerModal">
+                      <i class="fas fa-road"></i>
+                      Trip Planner
+                  </a>
+              </li>
+              <li>
+                  <a href="#settings" data-toggle="modal" aria-expanded="false" data-target="#settingsModal">
+                      <i class="fas fa-cog"></i>
+                      Settings
+                  </a>
+              </li>
+              <li>
+                  <a href="#help" data-toggle="modal" aria-expanded="false" data-target="#helpModal">
+                      <i class="fas fa-question"></i>
+                      Help
+                  </a>
+              </li>
+              <li>
+                  <a href="payment.html" aria-expanded="false">
+                      <i class="fas fa-credit-card"></i>
+                      Payment
+                  </a>
+              </li>
+              <li>
+              <a href="#downloadSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                  <i class="fas fa-download"></i>
+                  Download App
+              </a>
+              <ul class="collapse list-unstyled" id="downloadSubmenu">
+                  <li>
+                      <a href="#">Android</a>
+                  </li>
+                  <li>
+                      <a href="#">iOS</a>
+                  </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#termsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                  <i class="fas fa-document"></i>
+                  Terms & Conditions
+              </a>
+              <ul class="collapse list-unstyled" id="termsSubmenu">
+                  <li>
+                      <a href="#">Terms of use</a>
+                  </li>
+                  <li>
+                      <a href="#">Privacy Policy</a>
+                  </li>
+              </ul>
+              </li>
+          </ul>
+        </nav>
+    </div>
+</div>
+    <div id="map"></div>
+<script>
+  var map;
+  function initMap() {
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: 47.4979, lng: 19.0402},
+      zoom: 15,
+         disableDefaultUI: true
+    });
+  }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer>
 </script>
 
-<div id="menu" class="left-menu">
+<!-- <div id="menu" class="left-menu">
     <ul class="list-group list-group-flush">
         <li class="list-group-item"><i class="fa fa-home" aria-hidden="true"></i> Home</li>
         <li class="list-group-item"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</li>
@@ -34,8 +110,7 @@
         <li class="list-group-item">Filters</li>
         <li class="list-group-item">Trip Planner</li>
         <li class="list-group-item">Filters</li>
-        <!-- <li class="list-group-item settings"><button id="settings">Settings</button></li> -->
-        <li class="list-group-item"><a class="showmodal" href="#" data-action="settings">Settings</a></li>
+        <li class="list-group-item settings"><button id="settings">Settings</button></li>
         <li class="list-group-item">Help</li>
         <li class="list-group-item">Payment</li>
         <li class="list-group-item download-app">
@@ -58,4 +133,4 @@
             </div>
         </li>
     </ul>
-</div>
+</div> -->
