--- a/front/html/main.html
+++ b/front/html/main.html
@@ -101,7 +101,7 @@
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer></script>
 
-<div class="modal" id="showModal" tabindex="-1" role="dialog"></div>
+<div class="modal fade" id="showModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"></div>
 
 <!-- <div id="menu" class="left-menu">
     <ul class="list-group list-group-flush">
