modals edited, updated

--- a/front/html/header.html
+++ b/front/html/header.html
@@ -37,23 +37,94 @@
             </div>
         </div>
     </div>
-    <!-- <div class="header-fix-block">
-        <div class="row">
-            <div class="col-9 head-block-text">
-                <h1>GoCharge</h1>
-            </div>
-            <div class="col-3 head-block-text">
-                <div class="row">
-                    <div class="col-4">
-                        <h1>1</h1>
-                    </div>
-                    <div class="col-4">
-                        <h1>2</h1>
-                    </div>
-                    <div class="col-4">
-                        <h1>3</h1>
-                    </div>
-                </div>
-            </div>
+
+    <div class="sidebar-menu">
+        <div class="sidebar-header">
+          <button type="button" id="sidebarCollapse" class="btn btn-info">
+              <i class="fas fa-bars"></i>
+          </button>
+        </div>  
+        <div class="wrapper">
+            <!-- Sidebar  -->
+            <nav id="sidebar">
+              <ul class="list-unstyled components">
+                    <li class="active showmodal">
+                      <a href="main.html" data-toggle="collapse" aria-expanded="false">
+                          <i class="fas fa-home"></i>
+                          Home
+                      </a>
+                  </li>
+                  <li class="showmodal">
+                      <a href="#login" data-action="login">
+                          <i class="fas fa-sign-in-alt"></i>
+                          Login
+                      </a>
+                  </li>
+                  <li class="showmodal">
+                      <a href="#register" data-action="register">
+                          <i class="fas fa-id-card"></i>
+                          Register
+                      </a>
+                  </li>
+                  <li class="showmodal">
+                      <a href="#filters" data-action="filters">
+                          <i class="fas fa-plug"></i>
+                          Filters
+                      </a>
+                  </li>
+                  <li class="showmodal">
+                      <a href="#planner" data-action="trip_planner">
+                          <i class="fas fa-road"></i>
+                          Trip Planner
+                      </a>
+                  </li>
+                  <li class="showmodal">
+                      <a href="#settings" data-action="settings">
+                          <i class="fas fa-cog"></i>
+                          Settings
+                      </a>
+                  </li>
+                  <li class="showmodal">
+                      <a href="#help" data-action="help">
+                          <i class="fas fa-question"></i>
+                          Help
+                      </a>
+                  </li>
+                  <li class="showmodal">
+                      <a href="payment" data-action="payment">
+                          <i class="fas fa-credit-card"></i>
+                          Payment
+                      </a>
+                  </li>
+                  <li class="showmodal">
+                  <a href="#downloadSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                      <i class="fas fa-download"></i>
+                      Download App
+                  </a>
+                  <ul class="collapse list-unstyled" id="downloadSubmenu">
+                      <li class="showmodal" >
+                          <a href="#">Android</a>
+                      </li>
+                      <li class="showmodal">
+                          <a href="#">iOS</a>
+                      </li>
+                  </ul>
+                </li>
+                <li class="showmodal">
+                  <a href="#termsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                      <i class="fas fa-document"></i>
+                      Terms & Conditions
+                  </a>
+                  <ul class="collapse list-unstyled" id="termsSubmenu">
+                      <li class="showmodal">
+                          <a href="#terms" data-action="terms_of_use">Terms of use</a>
+                      </li>
+                      <li class="showmodal">
+                          <a href="#privacy" data-action="privacy_and_policy">Privacy & Policy</a>
+                      </li>
+                  </ul>
+                  </li>
+              </ul>
+            </nav>
         </div>
-    </div> -->
+    </div>
