--- a/front/html/header.html
+++ b/front/html/header.html
@@ -28,7 +28,7 @@
                 </button>
             </div>
             <div class="col-md-7">
-                <div class="text-center text-light display-4 p-2" style="position:relative; font-size: 25px;">Go<i class="fas fa-bolt"></i>Charge</div>
+                <div class="text-center text-light display-4 p-2" style="font-size: 25px; margin-right: 20%;">Go<i class="fas fa-bolt"></i>Charge</div>
             </div>
             <div class="col-md-1">
                 <button style="background: transparent; border-color: transparent;">
