--- a/front/html/main.html
+++ b/front/html/main.html
@@ -1,26 +1,15 @@
 <div id="map"></div>
 <script>
-    var Go_ = {};
+  var Go_ = {};
     // var map;
-    function initMap() {
+  function initMap() {
     Go_.map = new google.maps.Map(document.getElementById('map'), {
-        center: {lat: 47.4979, lng: 19.0402},
-        zoom: 15,
+        center: {lat: 47.482570, lng: 19.065853},
+        zoom: 12,
         disableDefaultUI: true
     });
-    };</script>
+  };
+</script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer></script>
-  <!-- var map;
-  function initMap() {
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: {
-        lat: 47.4979, 
-        lng: 19.0402
-      },
-      zoom: 15,
-      disableDefaultUI: true
-    });
-  }
-</script> -->
 
 <div class="modal fade" id="showModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"></div>
