modal related issues are updated

--- a/front/html/header.html
+++ b/front/html/header.html
@@ -90,13 +90,13 @@
                           Help
                       </a>
                   </li>
-                  <li class="showmodal">
+                  <!-- <li class="showmodal">
                       <a href="payment" data-action="payment">
                           <i class="fas fa-credit-card"></i>
                           Payment
                       </a>
-                  </li>
-                  <li class="showmodal">
+                  </li> -->
+                 <!--  <li class="showmodal">
                   <a href="#downloadSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                       <i class="fas fa-download"></i>
                       Download App
@@ -109,7 +109,7 @@
                           <a href="#">iOS</a>
                       </li>
                   </ul>
-                </li>
+                </li> -->
                 <li class="showmodal">
                   <a href="#termsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                       <i class="fas fa-document"></i>
