--- a/front/html/main.html
+++ b/front/html/main.html
@@ -13,3 +13,24 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer></script>
 
 <div class="modal fade" id="showModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"></div>
+
+<div class="filters ">
+	<div class="select-type">
+		<div class="input-group mb-3">
+			<!-- <div class="input-group-prepend">
+				<label class="input-group-text" for="inputGroupSelect01">Filters</label>
+			</div> -->
+			<select class="custom-select" id="inputGroupSelect01">
+				<option selected>Choose type of wire</option>
+				<option value="1">One</option>
+				<option value="2">Two</option>
+				<option value="3">Three</option>
+			</select>
+		</div>
+	</div>
+
+	<div class="map-filter">
+		<button type="button" class="btn btn-primary">Driwe on map</button>
+	</div>
+	
+</div>
