--- a/front/html/main.html
+++ b/front/html/main.html
@@ -1,15 +1,11 @@
-<div id="map"></div>
-<script>
-  var Go_ = {};
-    // var map;
-  function initMap() {
-    Go_.map = new google.maps.Map(document.getElementById('map'), {
-        center: {lat: 47.482570, lng: 19.065853},
-        zoom: 12,
-        disableDefaultUI: true
-    });
-  };
-</script>
+<div id="container">
+	<div id="map"></div>
+	<canvas id="draw-canvas" style="position: absolute; bottom: 0; top: 0; display: none;"></canvas>
+
+	<script type="text/javascript" src="front/assets/js/jquery-3.3.1.min.js"></script>
+	<script src="front/assets/js/server.js" type="text/javascript"></script>
+</div>
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer></script>
 
 <div class="modal fade" id="showModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"></div>
@@ -17,9 +13,6 @@
 <div class="filters ">
 	<div class="select-type">
 		<div class="input-group mb-3">
-			<!-- <div class="input-group-prepend">
-				<label class="input-group-text" for="inputGroupSelect01">Filters</label>
-			</div> -->
 			<select class="custom-select" id="inputGroupSelect01">
 				<option selected>Choose type of wire</option>
 				<option value="1">One</option>
