--- a/front/html/main.html
+++ b/front/html/main.html
@@ -24,6 +24,7 @@
 
 	<div class="map-filter">
 		<button type="button" class="btn btn-primary">Driwe on map</button>
+		<button id="clear" class="hide visible">Очистить</button>
 	</div>
 	
 </div>
