--- a/front/html/main.html
+++ b/front/html/main.html
@@ -6,7 +6,7 @@
 	<script src="front/assets/js/server.js" type="text/javascript"></script>
 </div>
 
-<script>
+<!-- <script>
     var Go_ = {};
     // var map;
     function initMap() {
@@ -27,7 +27,7 @@
             Go_.map.setZoom(13);
         });
     };
-</script>
+</script> -->
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer></script>
 
@@ -46,8 +46,8 @@
 	</div>
 
 	<div class="map-filter">
-		<button type="button" class="btn btn-primary">Driwe on map</button>
-		<button id="clear" class="hide visible">Очистить</button>
+		<button id="draw" type="button" class="btn btn-primary">Driwe on map</button>
+		<button id="clear" class="hide visible btn btn-danger">Clear</button>
 	</div>
 	
 </div>
