--- a/front/html/main.html
+++ b/front/html/main.html
@@ -29,6 +29,17 @@
     };
 </script> -->
 
+<script>
+var Go_ = {};
+// var map;
+function initMap() {
+Go.map = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: 47.4979, lng: 19.0402},
+    zoom: 15,
+    disableDefaultUI: true
+});
+};</script>
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer></script>
 
 <div class="modal fade" id="showModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"></div>
