filter frontend not finished

--- a/front/html/header.html
+++ b/front/html/header.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="front/assets/css/master.css">
     <link rel="stylesheet" href="front/assets/css/server.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -54,7 +55,7 @@
                           Home
                       </a>
                   </li>
-                  <li class="showmodal">
+                 <!--  <li class="showmodal">
                       <a href="#login" data-action="login">
                           <i class="fas fa-sign-in-alt"></i>
                           Login
@@ -65,7 +66,7 @@
                           <i class="fas fa-id-card"></i>
                           Register
                       </a>
-                  </li>
+                  </li> -->
                   <li class="showmodal">
                       <a href="#filters" data-action="filters">
                           <i class="fas fa-plug"></i>
