logo, icon updated

--- a/front/html/header.html
+++ b/front/html/header.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GoCharge</title>
+    <link rel="icon" href="front/assets/images/logo.ico">
     <link rel="stylesheet" href="front/assets/fonts-icons/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/68a1da4b2e.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Montserrat:200,300,400" rel="stylesheet">
