front fix on images

--- a/front/html/header.html
+++ b/front/html/header.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="front/assets/css/style.css">
     <link rel="stylesheet" href="front/assets/css/master.css">
     <link rel="stylesheet" href="front/assets/css/server.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!--   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
     <!-- Custom fonts for this template-->
     <link href="front/assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -21,6 +21,8 @@
 
     <!-- Custom styles for this template-->
     <link href="front/assets/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="front/assets/css/sb-admin-2.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -59,12 +61,6 @@
             <!-- Sidebar  -->
             <nav id="sidebar">
               <ul class="list-unstyled components">
-                    <li class="active showmodal">
-                      <a href="#" data-toggle="collapse" aria-expanded="false">
-                          <i class="fas fa-home"></i>
-                          Home
-                      </a>
-                  </li>
                  <!--  <li class="showmodal">
                       <a href="#login" data-action="login">
                           <i class="fas fa-sign-in-alt"></i>
