--- a/front/html/footer.html
+++ b/front/html/footer.html
@@ -6,7 +6,7 @@
         </div>
      </footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
 	<!-- <script type="text/javascript" src="front/assets/js/server.js"></script> -->
 	<script type="text/javascript" src="front/assets/js/master.js"></script>
 
@@ -18,7 +18,7 @@
 	  <script src="front/assets/vendor/jquery-easing/jquery.easing.min.js"></script>
 
 	  <!-- Custom scripts for all pages-->
-	  <script src="front/assets/js/sb-admin-2.min.js"></script>
+	  <script src="front/assets/js/sb-admin-2.js"></script>
 
 </body>
 </html>
