mobile view fix

--- a/front/html/header.html
+++ b/front/html/header.html
@@ -43,7 +43,8 @@
                     <i class="fa fa-map-marker"></i>
                 </button>
             </div>
-            <div class="col-md-1">
+
+            <div class="d-none d-sm-inline-block">
                 <button id="language" style="background: transparent; border-color: transparent;">
                     <i class="fas fa-globe-americas fa-2x" style="color: white; float:right; padding:5px;"></i>
                 </button>
